dded cloud provider

--- a/usr/share/nginx/html/index.html
+++ b/usr/share/nginx/html/index.html
@@ -11,7 +11,7 @@
 </style>
 
 <head>
-  <meta http-equiv="refresh" content="5">
+  <meta http-equiv="refresh" content="2">
 </head>
 
 <body>
@@ -28,6 +28,7 @@
 			<p class="w3-justify">Visitor User agent: <!--#echo var="HTTP_USER_AGENT" --></p>
 			<p></p>
 			<p class="w3-opacity"><i>Server Information</i></p>
+			<p class="w3-justify">Server hosted on: VORTEIL_CLOUD</p>
 			<p class="w3-justify">Server IP address: <!--#echo var="SERVER_ADDR" --></p>
 			<p class="w3-justify">Server local time: <!--#echo var="DATE_LOCAL" --></p>
 			<p class="w3-justify">Server time (GMT): <!--#echo var="DATE_GMT" --></p>
