--- a/usr/share/nginx/html/index.html
+++ b/usr/share/nginx/html/index.html
@@ -16,7 +16,7 @@
 
 <body>
 	<div class="w3-content" style="max-width:800px;margin-top:46px">
-		<div class="w3-display-container w3-center w3-blue">
+		<div class="w3-display-container w3-center w3-green">
 			<img src="/images/vorteil_notext.png" style="width:50%">
 			<div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small"></div>
 		</div>
